[package]
name = "broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.3.0"
zmq = "0.9.2"
meic_mq = { path="../meic_mq" }
serde = "1.0.145"
serde_json = "1.0"
lazy_static = "1.4.0"
scheduled-thread-pool = "0.2.5"