[package]
name = "broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.3.0"
zmq = "0.9.2"
meic_mq = { path="../meic_mq" }
serde = "1.0.145"
serde_bytes = "0.11.7"

[dependencies.uuid]
version = "1.2.1"
features = [
"v4",                # Lets you generate random UUIDs
"fast-rng",          # Use a faster (but still sufficiently random) RNG
"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
