[package]
name = "meic_mq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.3.0"
serde = "1.0.145"
serde_bytes = "0.11.7"
ctrlc = "3.2.3"
zmq = "0.9.2"
lazy_static = "1.4.0"

[dependencies.uuid]
version = "1.2.1"
features = [
"v4",                # Lets you generate random UUIDs
"fast-rng",          # Use a faster (but still sufficiently random) RNG
"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
